# DemoLearnFFmpeg01

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dxtest/demolearnffmpeg01/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dxtest/demolearnffmpeg01/: DecodeActivity.java  MainActivity.java
app/src/main/java/com/dxtest/demolearnffmpeg01/temp/: Demo1DecodeActivity.java  Demo2PThreadActivity.java
app/src/main/res/layout/: activity_decode.xml  activity_demo1_decode.xml  activity_demo2_pthread.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dxtest/demolearnffmpeg01/: ExampleUnitTest.java
simpleastffmpeg/: .gitignore  CMakeLists.txt  build.gradle  常用javap-javah命令.md
simpleastffmpeg/src/androidTest/java/com/dxtest/simpleastffmpeg/: ExampleInstrumentedTest.java
simpleastffmpeg/src/main/: AndroidManifest.xml
simpleastffmpeg/src/main/cpp/: JniFFmpegHelloWorld.c  JniFFmpegHelloWorld.cpp  JniFFmpegHelloWorld.h  com_dxtest_simpleastffmpeg_JniFFmpeg02Decoder.c  com_dxtest_simpleastffmpeg_JniFFmpeg02Decoder.cpp  com_dxtest_simpleastffmpeg_JniFFmpeg02Decoder.h  com_dxtest_simpleastffmpeg_JniFFmpeg03DecoderTest.c  com_dxtest_simpleastffmpeg_JniFFmpeg03DecoderTest.h  com_dxtest_simpleastffmpeg_threadpool_ThreadPool.c  com_dxtest_simpleastffmpeg_threadpool_ThreadPool.h  compoment-ffmpeg.c  demo-pthread.c  logUtils.h  main.c  support.c
simpleastffmpeg/src/main/java/com/dxtest/simpleastffmpeg/: JniFFmpeg02Decoder.java  JniFFmpeg03DecoderTest.java  JniFFmpegHelloWorld.java
simpleastffmpeg/src/main/java/com/dxtest/simpleastffmpeg/base/: BaseJniFFmpegApplication.java
simpleastffmpeg/src/main/java/com/dxtest/simpleastffmpeg/threadpool/: BaseLocalRunnable.java  LocalRunnable.java  MainRunnable.java  TestJava.java  ThreadPool.java  ThreadPoolRun.java
simpleastffmpeg/src/main/res/values/: strings.xml
simpleastffmpeg/src/test/java/com/dxtest/simpleastffmpeg/: ExampleUnitTest.java
